--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "1.0.0",
   "description": "Authentication module for AngularJS",
   "main": "js/angular-authentication.js",
-  "directories": {
-    "doc": "docs",
-    "example": "example"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/qloo/angular-authentication.git"
@@ -24,6 +17,9 @@
   "devDependencies": {
     "docco": "~0.6.2",
     "grunt": "~0.4.1",
-    "bower": "~0.8.5"
+    "bower": "~0.8.5",
+    "express": "~3.1.0",
+    "grunt-karma": "~0.3.0",
+    "grunt-contrib-jshint": "~0.3.0"
   }
 }
