Work on travis support

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "angular",
     "authentication"
   ],
+  "scripts": {
+    "test": "grunt test"
+  },
   "author": "Michael Diolosa <michael.diolosa@gmail.com>",
   "license": "MIT",
   "readmeFilename": "README.md",
