Use grunt check for npm test so travis lints as well as tests

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "authentication"
   ],
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt check"
   },
   "author": "Michael Diolosa <michael.diolosa@gmail.com>",
   "license": "MIT",
