--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt": "~0.4.1",
     "bower": "~0.8.5",
     "express": "~3.1.0",
-    "grunt-karma": "~0.3.0",
-    "grunt-contrib-jshint": "~0.3.0"
+    "grunt-karma": "~0.4.0",
+    "grunt-contrib-jshint": "~0.4.0",
+    "grunt-contrib-clean": "~0.4.0"
   }
 }
