--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "~3.1.0",
     "grunt-karma": "~0.4.0",
     "grunt-contrib-jshint": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0"
+    "grunt-contrib-clean": "~0.4.0",
+    "chai": "~1.5.0",
+    "mocha": "~1.9.0"
   }
 }
