--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "grunt-karma": "~0.4.0",
     "grunt-contrib-jshint": "~0.4.0",
     "grunt-contrib-clean": "~0.4.0",
-    "chai": "~1.5.0",
-    "mocha": "~1.9.0"
+    "chai": "~1.5.0"
   }
 }
